fixed title font size for version tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,10 @@ body {
     padding-top: 20px;
   }
 
+  .title {
+    font-size: 40px;
+  }
+
   .logo {
     margin-left: 30px;
   }
